2014-05-22  Michael Wright  <wrigh517@msu.edu>

    * scripts/fastq-to-fasta: Moved fastq-to-fasta.py into scripts from sandbox
    * tests/test_scripts.py: Added tests for fastq-to-fasta.py
    * tests/test-data: Added FASTQ file with N's in sequence for testing

2014-05-16  Michael R. Crusoe  <mcrusoe@msu.edu>

    * docs/scripts.txt: include sweep-reads-buffered.py

2014-05-14  Adam Caldwell  <adam.caldwell@gmail.com>

    * Makefile: change pip to pip2. Fixes assorted make problems on systems
    where pip links to pip3

2014-05-14  Michael R. Crusoe  <mcrusoe@msu.edu>

    * lib/{zlib,bzip2} -> third-party/
    * setup.{cfg,py}: Move third party libraries to their own directory
    * Makefile: add sloccount target for humans and the sloccount.sc target for
   Jenkins

2014-05-14  Michael R. Crusoe  <mcrusoe@msu.edu>

    * lib/{zlib,bzip2} -> third-party/
    * setup.{cfg,py}: Move third party libraries to their own directory
    * Makefile: add sloccount target for humans and the sloccount.sc target for
   Jenkins

2014-05-13  Michael Wright  <wrigh517@msu.edu>

    * sandbox/fastq-to-fasta.py: now reports number of reads dropped due to
    'N's in sequence. close 395

2014-05-13  Michael R. Crusoe  <mcrusoe@msu.edu>

    * doc/release.txt: additional fixes

2014-05-09  Luiz Irber  <irberlui@msu.edu>

    Version 1.0.1

2014-05-09  Michael R. Crusoe  <mcrusoe@msu.edu>

    * doc/release.txt: update release instructions

2014-05-06  Michael R. Crusoe  <mcrusoe@msu.edu>

    * lib/{subset,counting}.cc: fix cppcheck errors; astyle -A10
    --max-code-length=80

2014-05-06  Titus Brown  <titus@idyll.org>

    * sandbox/calc-best-assembly.py: added script to calculate best
    assembly from a list of contig/scaffold files
	
2014-04-23  Titus Brown  <titus@idyll.org>

    * scripts/abundance-dist-single.py: fixed problem where ReadParser was
    being created anew for each thread; regression introduced in 4b823fc.

2014-04-22  Michael R. Crusoe  <mcrusoe@msu.edu>
