@@ -125,3 +125,6 @@ Read handling: interleaving, splitting, etc.
 
 .. autoprogram:: split-paired-reads:get_parser()
         :prog: split-paired-reads.py
+
+.. autoprogram:: fastq-to-fasta:get_parser()
+        :prog: fastq-to-fasta.py
